# cmake-examples

01-basic/A-hello-cmake/: CMakeLists.txt
01-basic/B-hello-headers/: CMakeLists.txt  compile_commands.json
01-basic/C-static-library/: CMakeLists.txt  compile_commands.json
